--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title：Welcome to Fangzhou Tang's Homepage!
+title: Welcome to Fangzhou Tang's Homepage!
 description: Stay Hard & Keep Moving 
